# arch-diff-miner

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  SPECIFICATION.md  mine_adl_diffs.py  pyproject.toml
.github/workflows/: release-notes.yml
arch_diff_miner/: __init__.py  __main__.py  cli.py  context.py  jsonl_writer.py
scripts/: release_notes.sh  run_context_smoke.sh
tests/: __init__.py  conftest.py  test_cli_jsonl.py  test_context_stats.py  test_diff_walker.py  test_jsonl_emission.py
tests/fixtures/: __init__.py  seed_context_repo.py  seed_issue18_repo.py
tests/golden/: context_signals_seed_repo.json
