[project]
name = "arch-diff-miner"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygit2>=1.14.0",
    "typer>=0.12.3",
]

[project.scripts]
arch-diff-miner = "arch_diff_miner.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
